--- a/chingoal/store/templates/store/store.html
+++ b/chingoal/store/templates/store/store.html
@@ -101,14 +101,14 @@
                     <div class="team-member">
                         <img src="{% static "img/team/2.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(0,'{{cur_user.title}}')">
                         <h4 class="header1">Pupil</h4>
-                        <p class="text-muted">$3</p>                       
+                        <p class="text-muted">free</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="{% static "img/team/4.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(1,'{{cur_user.title}}')">
                         <h4 class="header1">Freshman</h4>
-                        <p class="text-muted">$5</p>
+                        <p class="text-muted">$3</p>
                         
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                     <div class="team-member">
                         <img src="{% static "img/team/1.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(2,'{{cur_user.title}}')">
                         <h4 class="header1">Sophomore</h4>
-                        <p class="text-muted">$8</p>
+                        <p class="text-muted">$4</p>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                     <div class="team-member">
                         <img src="{% static "img/team/3.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(3,'{{cur_user.title}}')">
                         <h4 class="header1">Junior</h4>
-                        <p class="text-muted">$10</p>
+                        <p class="text-muted">$5</p>
                         
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                     <div class="team-member">
                         <img src="{% static "img/team/5.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(4,'{{cur_user.title}}')">
                         <h4 class="header1">Senior</h4>
-                        <p class="text-muted">$15</p>
+                        <p class="text-muted">$6</p>
      
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                     <div class="team-member">
                         <img src="{% static "img/team/6.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(5,'{{cur_user.title}}')">
                         <h4 class="header1">Graduate</h4>
-                        <p class="text-muted">$20</p>
+                        <p class="text-muted">$7</p>
                     </div>
                 </div>
             </div>
