--- a/chingoal/discussion/templates/discussion/discussion_reply.html
+++ b/chingoal/discussion/templates/discussion/discussion_reply.html
@@ -94,10 +94,10 @@
             <div class="col-lg-3">
                 <div class="panel panel-warning">
                     <div class="panel-heading text-center">
-                        <a href="{% url 'viewProfile' post_user.username %}"><h3>{{post_user.username}}</h3></a>
+                        <a href="{% url 'viewProfile' post_user.user.username %}"><h3>{{post_user.user.username}}</h3></a>
                     </div>
                     <div class="panel-body bg-light-gray text-center">
-                        <img src="{{cur_user.photo.url}}" class="img-responsive img-circle"  alt="profile_image" id="profile_img">
+                        <img src="{{post_user.photo.url}}" class="img-responsive img-circle"  alt="profile_image" id="profile_img">
                         {% for i in user_level_loop %}
                             <i class="fa fa-star fa-2x text-muted"></i>
                         {% endfor %}
