--- a/chingoal/store/templates/store/store.html
+++ b/chingoal/store/templates/store/store.html
@@ -99,14 +99,14 @@
             <div class="row bg-light-gray">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/team/2.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(0,'{{cur_user.title}}')">
+                        <img src="{% static "img/team/2.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(0,'{{cur_user.title}}',{{cur_user.user_vm}})">
                         <h4 class="header1">Pupil</h4>
                         <p class="text-muted">free</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/team/4.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(1,'{{cur_user.title}}')">
+                        <img src="{% static "img/team/4.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(1,'{{cur_user.title}}',{{cur_user.user_vm}})">
                         <h4 class="header1">Freshman</h4>
                         <p class="text-muted">$3</p>
                         
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/team/1.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(2,'{{cur_user.title}}')">
+                        <img src="{% static "img/team/1.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(2,'{{cur_user.title}}',{{cur_user.user_vm}})">
                         <h4 class="header1">Sophomore</h4>
                         <p class="text-muted">$4</p>
                     </div>
@@ -124,7 +124,7 @@
              <div class="row bg-light-gray">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/team/3.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(3,'{{cur_user.title}}')">
+                        <img src="{% static "img/team/3.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(3,'{{cur_user.title}}',{{cur_user.user_vm}})">
                         <h4 class="header1">Junior</h4>
                         <p class="text-muted">$5</p>
                         
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/team/5.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(4,'{{cur_user.title}}')">
+                        <img src="{% static "img/team/5.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(4,'{{cur_user.title}}',{{cur_user.user_vm}})">
                         <h4 class="header1">Senior</h4>
                         <p class="text-muted">$6</p>
      
@@ -140,7 +140,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/team/6.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(5,'{{cur_user.title}}')">
+                        <img src="{% static "img/team/6.jpg"%}" class="img-responsive img-circle title_img" alt="" onClick="buyTitle(5,'{{cur_user.title}}',{{cur_user.user_vm}})">
                         <h4 class="header1">Graduate</h4>
                         <p class="text-muted">$7</p>
                     </div>
@@ -157,31 +157,31 @@
 
                             {% if cur_user.unlock > 0 %}<button type="button" class="btn btn-default btn-lg btn-circle">
                             <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton1" value="1" class="btn btn-default btn-lg btn-circle" onClick="unlock('myButton1',{{cur_user.unlock}})">
+                            {% else %}<button type="button" id="myButton1" value="1" class="btn btn-default btn-lg btn-circle" onClick="unlock('myButton1',{{cur_user.unlock}},{{cur_user.user_vm}})">
                             <span class="fa fa-lock"></span>
                             {% endif %} Session 1</button>
                             
                             {% if cur_user.unlock > 1 %}<button type="button" class="btn btn-danger btn-lg btn-circle">
                             <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton2" value="2" class="btn btn-danger btn-lg btn-circle" onClick="unlock('myButton2',{{cur_user.unlock}})">
+                            {% else %}<button type="button" id="myButton2" value="2" class="btn btn-danger btn-lg btn-circle" onClick="unlock('myButton2',{{cur_user.unlock}},{{cur_user.user_vm}})">
                             <span class="fa fa-lock"></span>
                             {% endif %} Session 2</button>
                             
                             {% if cur_user.unlock > 2 %}<button type="button" class="btn btn-info btn-lg btn-circle">
                             <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton3" value="3" class="btn btn-info btn-lg btn-circle" onClick="unlock('myButton3',{{cur_user.unlock}})">
+                            {% else %}<button type="button" id="myButton3" value="3" class="btn btn-info btn-lg btn-circle" onClick="unlock('myButton3',{{cur_user.unlock}},{{cur_user.user_vm}})">
                             <span class="fa fa-lock"></span>
                             {% endif %} Session 3</button>
                             
                             {% if cur_user.unlock > 3 %}<button type="button" class="btn btn-warning btn-lg btn-circle">
                             <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton4" value="4" class="btn btn-warning btn-lg btn-circle" onClick="unlock('myButton4',{{cur_user.unlock}})">
+                            {% else %}<button type="button" id="myButton4" value="4" class="btn btn-warning btn-lg btn-circle" onClick="unlock('myButton4',{{cur_user.unlock}},{{cur_user.user_vm}})">
                             <span class="fa fa-lock"></span>
                             {% endif %} Session 4</button>
                             
                             {% if cur_user.unlock > 4 %}<button type="button" class="btn btn-success btn-lg btn-circle">
                             <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton5" value="5" class="btn btn-success btn-lg btn-circle" onClick="unlock('myButton5',{{cur_user.unlock}})">
+                            {% else %}<button type="button" id="myButton5" value="5" class="btn btn-success btn-lg btn-circle" onClick="unlock('myButton5',{{cur_user.unlock}},{{cur_user.user_vm}})">
                             <span class="fa fa-lock"></span>
                             {% endif %} Session 5</button>
 
