--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                             {% endif %}
-                            <img src="{% static "img/portfolio/roundicons.png"%}" class="img-responsive" alt="">
+                            <img src="{% static "img/portfolio/1.jpg"%}" class="img-responsive image" alt="">
                                 </a>
                         <div class="portfolio-caption">
                             <h4>Level 1</h4>
@@ -198,7 +198,7 @@
                                 </div>
                             </div>
                             {% endif %}
-                            <img src="{% static "img/portfolio/startup-framework.png"%}" class="img-responsive" alt="">
+                            <img src="{% static "img/portfolio/2.jpg"%}" class="img-responsive image" alt="">
                                 </a>
                         <div class="portfolio-caption">
                             <h4>Level 2</h4>
@@ -221,7 +221,7 @@
                                 </div>
                             </div>
                             {% endif %}
-                            <img src="{% static "img/portfolio/treehouse.png"%}" class="img-responsive" alt="">
+                            <img src="{% static "img/portfolio/3.jpg"%}" class="img-responsive image" alt="">
                                 </a>
                         <div class="portfolio-caption">
                             <h4>Level 3</h4>
@@ -244,7 +244,7 @@
                                 </div>
                             </div>
                             {% endif %}
-                            <img src="{% static "img/portfolio/golden.png"%}" class="img-responsive" alt="">
+                            <img src="{% static "img/portfolio/4.jpg"%}" class="img-responsive image" alt="">
                                 </a>
                         <div class="portfolio-caption">
                             <h4>Level 4</h4>
@@ -268,7 +268,7 @@
                                     </div>
                                 </div>
                                 {% endif %}
-                                <img src="{% static "img/portfolio/escape.png"%}" class="img-responsive" alt="">
+                                <img src="{% static "img/portfolio/5.jpg"%}" class="img-responsive image" alt="">
                                     </a>
                             <div class="portfolio-caption">
                                 <h4>Level 5</h4>
@@ -291,7 +291,7 @@
                                 </div>
                             </div>
                             {% endif %}
-                            <img src="{% static "img/portfolio/dreams.png"%}" class="img-responsive" alt="">
+                            <img src="{% static "img/portfolio/6.jpg"%}" class="img-responsive image" alt="">
                                 </a>
                         <div class="portfolio-caption">
                             <h4>Level 6</h4>
